<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MovieDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="309dp"
            android:layout_height="398dp"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/description"/>

        <TextView
            android:id="@+id/movieTitle"
            android:layout_width="264dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/title"
            android:textSize="20sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poster" />
        

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/watchBtn"
            android:layout_width="163dp"
            android:layout_height="63dp"
            android:layout_marginTop="40dp"
            android:background="@color/purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieTitle" >

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_color"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/watch_now"
                android:textStyle="bold"
                android:padding="20dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/white"/>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>