<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:padding="10dp"
    tools:context=".activity.MainActivity">




    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="365dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/capture"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:contentDescription="@string/description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SFVideos"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="80dp"
            android:paddingEnd="1dp"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/description"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="1dp"
            android:src="@drawable/ic_notifications_none"
            android:contentDescription="@string/description"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="1dp"
            android:src="@drawable/ic_download"
            android:contentDescription="@string/description"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingStart="5dp"
            android:paddingEnd="1dp"
            android:src="@drawable/profile"
            android:contentDescription="@string/description"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/items"
        android:layout_width="330dp"
        android:layout_height="44dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:paddingTop="9dp"
            android:src="@drawable/home_icon"
            android:contentDescription="@string/description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movies"
            android:paddingStart="5dp"
            android:paddingEnd="1dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/spinID"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web_series"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/spin"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genres"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/spinID2"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:text="@string/special"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinID3"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:spinnerMode="dropdown" />


    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="357dp"
        android:layout_height="526dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/items">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/parentRecyclerView"
            android:layout_width="354dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/parent_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="367dp"
        android:layout_height="70dp"
        android:background="@color/purple"
        app:itemActiveIndicatorStyle="@style/App.Custom.Indicator"
        app:itemIconSize="20dp"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" >
    </com.google.android.material.bottomnavigation.BottomNavigationView>

<WebView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>
